--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "@tailwindcss/aspect-ratio": "^0.4.2",
         "@tailwindcss/forms": "^0.5.10",
         "@tailwindcss/typography": "^0.5.16",
+        "@types/dompurify": "^3.0.5",
         "@types/nodemailer": "^6.4.17",
         "archiver": "^7.0.1",
         "aws-sdk": "^2.1692.0",
@@ -64,10 +65,12 @@
         "critters": "^0.0.23",
         "cssnano": "^7.1.0",
         "date-fns": "^2.30.0",
+        "dompurify": "^3.3.0",
         "express": "^4.18.2",
         "form-data": "^4.0.0",
         "framer-motion": "^12.23.9",
         "ioredis": "^5.7.0",
+        "isomorphic-dompurify": "^2.33.0",
         "leaflet": "^1.9.4",
         "next": "14.0.4",
         "next-auth": "^4.24.5",
